--- a/posts/2024-04-02-data-viz-course/index.qmd
+++ b/posts/2024-04-02-data-viz-course/index.qmd
@@ -22,7 +22,7 @@ draft: false
 
 <br>
 
-<div class="dark-green-bg">**TL;DR** I recently developed and taught a grad-level course on data visualization & communication! It was incredibly challenging and equally rewarding. I began the planning process by defining the course learning objectives, which ultimately guided what topics to cover and how to design homework assignments. I implemented a version of specifications grading, where students have the opportunity to use feedback to revise and resubmit assignments for an improved score. I built out a [course website](https://samanthacsik.github.io/EDS-240-data-viz/) which housed all course-related content in one, easy-to-access place. Throughout the course, we prioritized transparency, goal-setting, and opportunities for instructor, TA, and peer-to-peer feedback on student-created data visualizations. I learned so much from other educators, both those that I know personally, and those who so willingly share their resources and ideas online.</div>
+<div class="dark-green-bg">**TL;DR** I recently developed and taught a grad-level course on data visualization & communication! It was incredibly challenging and equally rewarding. I began the planning process by defining the course learning objectives, which ultimately guided what topics to cover and how to design homework assignments. I implemented a version of specifications grading, where students have the opportunity to use feedback to revise and resubmit assignments for an improved score. I built out a [course website](https://eds-240-data-viz.github.io/) which housed all course-related content in one, easy-to-access place. Throughout the course, we prioritized transparency, goal-setting, and opportunities for instructor, TA, and peer-to-peer feedback on student-created data visualizations. I learned so much from other educators, both those that I know personally, and those who so willingly share their resources and ideas online.</div>
 
 <br>
 
@@ -99,7 +99,7 @@ Some action items needed to be addressed in advance of even beginning to plan th
 
 - **September 2023:** Signed my contract. After negotiations, I ended up at 50% time in my typical full-time role (Data Training Coordinator, more formally classified as Academic Coordinator I), 33% time as Unit 18 Lecturer, and 17% time for curriculum development. It's important to note that these appointments are *only* for the quarter in which the course is taught (i.e. winter quarter, Jan - Mar 2024). The lecturer salary scale is higher than than my current full-time salary, so this split appointment meant I would earn a bit more during winter quarter. Once signed, I got started working on the course syllabus.
 
-- **October - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class during fall quarter (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~30hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 430: Intro to Shiny](https://ucsb-meds.github.io/EDS-430-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
+- **October - November 2023:** While my appointment didn't officially start until January, I spent about 30-40hrs/week prepping for the class during fall quarter (which is a lot of time...this is not an attempt to applaud "the grind," but rather reflect how this experience played out for me). I focused primarily on the syllabus, grading structure, drafting high-level outlines of weekly topics, building the skeleton of the course website, and learning other necessary classroom management tools (I'll elaborate more on all of these in the next sections). I was able to prep ~2 of 4 homework assignments (plus jot down ideas for others), and even a couple early lectures. I also spent ~30hrs/week teaching my typical fall workshops, reviewing / updating materials for [EDS 296-1W: Intro to Shiny](https://ucsb-meds.github.io/EDS-296-Intro-to-Shiny/) (a 2-day short course that I also teach in winter quarter), and other MEDS administrative stuff.
 
 - **December 2023:** Oof, this was definitely the hardest month out of the whole experience -- while most folks were winding down after a busy fall quarter, I felt like I had to ramp up (more so than I already had been). I was also tired from a stacked fall and wanted so desperately for a break that I felt like I couldn't really take. I was also coming to terms with the fact I would absolutely not have the whole course planned / materials created ahead of the January 8th start date ({{< fa face-grin-beam-sweat title="a grinning face with a drop of sweat dripping from it's brow" >}} yes, that was incredibly naive thinking on my part). I *did* hope to have materials and plans for the first 6 weeks of the quarter largely created -- I had a number of other non-EDS 240 events, teaching, and responsibilities during this first half of the quarter and I was genuinely worried about not having enough time to do it all.
 
@@ -169,7 +169,7 @@ knitr::include_graphics("media/grade-tracker-green.png")
 
 I would be lying if I said that I wasn't **incredibly nervous** to try this out. While all the literature I had explored got me super jazzed about the idea of specs grading, it *is* quite different than what our students are used to...and **change can feel disruptive**. I spent a full hour of our first (3hr-long) lecture laying out this grading structure, the accompanying token system, and expectations (and of course, answering many questions). 
 
-Some students were understandably uncertain about the specs grading + token system at the start, but **I ultimately received overwhelmingly positive feedback**. I'll share just a few student quotes, pulled from their [mid-course](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR2-midcourse.html) and [end-of-course](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR3-endcourse.html) self-reflections:
+Some students were understandably uncertain about the specs grading + token system at the start, but **I ultimately received overwhelmingly positive feedback**. I'll share just a few student quotes, pulled from their [mid-course](https://eds-240-data-viz.github.io/assignments/SR2-midcourse.html) and [end-of-course](https://eds-240-data-viz.github.io/assignments/SR3-endcourse.html) self-reflections:
 
 >[*"I really appreciated the alternative grading style as it took a lot of pressure off of me, as I tend to be a bit of perfectionist. So without the number and letter grades on individual assignments, it allowed me to enjoy the work more and potentially create better visualizations in the process."*]{.small-text}
 
@@ -250,7 +250,7 @@ Some potentially helpful tips:
 - **create a [stylesheet](https://github.com/samanthacsik/EDS-240-data-viz/blob/main/meds-slides-styles.scss)** to maintain a consistent look across all slide decks (it also facilitates faster slide development)
 - **use an iPad or second device while teaching** -- I absolutely do not memorize all the code we cover during class and I need an easy way to reference it while live-coding. My laptop / RStudio will be visible on the screen for students to follow along with, while I reference the slides / code on my separate device
 
-<div class="dark-green-bg center-text large-text">{{< fa arrow-pointer title="a computer mouse pointer" >}} Click around the EDS 240 [course website](https://samanthacsik.github.io/EDS-240-data-viz/){target="_blank"} if you're interested in exploring further!</div>
+<div class="dark-green-bg center-text large-text">{{< fa arrow-pointer title="a computer mouse pointer" >}} Click around the EDS 240 [course website](https://eds-240-data-viz.github.io/){target="_blank"} if you're interested in exploring further!</div>
 
 ### 4. Create & manage assignments + provide feedback{#assignments}
 
@@ -262,13 +262,13 @@ This was honestly the part I dreaded the most. While I've taught my fair share o
 - how much is a **reasonable amount of work** to ask of students given the submission schedule (they had ~2 weeks per assignment)?
 - how can we shift assessments to be more **learner-centered** and less susceptible to plagiarism in the age of generative AI tools (e.g. ChatGPT)?
 
-While I won't go into specific tasks for each assignment (you can check them out on the [course website](https://samanthacsik.github.io/EDS-240-data-viz/assignments.html) though!), **I really enjoyed asking students to both complete a coding task *and* describe in writing their considerations, workflow, design choices, etc. which (I hoped) would put a greater focus on the decision-making process.** I definitely felt a bit of validation when a student responded to the question, *"How have your learning goals changed? Have they stayed the same?"* (from the [mid-course self-reflection](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR2-midcourse.html)):
+While I won't go into specific tasks for each assignment (you can check them out on the [course website](https://eds-240-data-viz.github.io/assignments.html) though!), **I really enjoyed asking students to both complete a coding task *and* describe in writing their considerations, workflow, design choices, etc. which (I hoped) would put a greater focus on the decision-making process.** I definitely felt a bit of validation when a student responded to the question, *"How have your learning goals changed? Have they stayed the same?"* (from the [mid-course self-reflection](https://eds-240-data-viz.github.io/assignments/SR2-midcourse.html)):
 
 >[*"I feel that this class has greatly allowed me to progress towards my learning goals, but in a different way than I originally thought. My initial goal in taking this class was to get better at `{ggplot2}` and other data viz packages. While I have definitely been doing this, I have much more so been progressing in my learning of how to approach data visualization and then using packages like `{ggplot2}` as a tool to execute this. My learning goals have sort of shifted for the better in a way that I wasn’t really anticipating."*]{.small-text}
 
 #### Managing assignments 
 
-All assignments were posted to the [course website](https://samanthacsik.github.io/EDS-240-data-viz/assignments.html), and depending on the assignment / task, **students were asked to submit completed work either [(a) via GitHub Classroom](#gh-classroom) *or* [(b) by submitting rendered or published `.qmd` files](#qmd-files):** 
+All assignments were posted to the [course website](https://eds-240-data-viz.github.io/assignments.html), and depending on the assignment / task, **students were asked to submit completed work either [(a) via GitHub Classroom](#gh-classroom) *or* [(b) by submitting rendered or published `.qmd` files](#qmd-files):** 
 
 ##### (a) GitHub Classroom{#gh-classroom} 
 
@@ -295,7 +295,7 @@ For assignments submitted via GitHub Classroom, **we provided feedback largely b
   
 #### (b) Submitting rendered or published `.qmd` files{#qmd-files}
 
-The [final course assignment](https://samanthacsik.github.io/EDS-240-data-viz/assignments/HW4.html) asked students to create a series of visualizations using data of their choosing. This large task was broken down into smaller pieces and spread across all four homework assignments (so students were working on it throughout the entire quarter). **For this course-long project, we asked students to create their own GitHub repositories (i.e. not using GitHub Classroom), where they would do all related work.** Final projects were submitted either as published Quarto documents (using [GitHub Pages](https://pages.github.com/)) or as published blog posts on student personal websites. Intermediate submissions (i.e. those that were a part of the first three homework assignments) were submitted as rendered HTML files, which we could open and assess via the web browser. **We provided feedback for these submissions by opening [issues](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) on student repos.**
+The [final course assignment](https://eds-240-data-viz.github.io/assignments/HW4.html) asked students to create a series of visualizations using data of their choosing. This large task was broken down into smaller pieces and spread across all four homework assignments (so students were working on it throughout the entire quarter). **For this course-long project, we asked students to create their own GitHub repositories (i.e. not using GitHub Classroom), where they would do all related work.** Final projects were submitted either as published Quarto documents (using [GitHub Pages](https://pages.github.com/)) or as published blog posts on student personal websites. Intermediate submissions (i.e. those that were a part of the first three homework assignments) were submitted as rendered HTML files, which we could open and assess via the web browser. **We provided feedback for these submissions by opening [issues](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) on student repos.**
 
 ### 5. Plan TA responsibilities{#TA}
 
@@ -315,7 +315,7 @@ A major challenge when teaching technical skills (e.g. coding) is assisting stud
 
 #### Grading
 
-**Sevan and I split grading.** I read and wrote responses to student self-reflections, while Sevan graded homework assignments 1-3 (along with any that were revised / resubmitted for a regrade), in accordance with the provided rubrics. I provided written feedback to all students on homework #3 (separate from their grades), since this assignment asked for the first complete draft of all data visualizations which would be submitted as part of their [final course assignment](https://samanthacsik.github.io/EDS-240-data-viz/assignments/HW4.html). I also chose to grade these final assignments (along with any regrades), in part because I wanted to understand where tweaks could me made for next year, and also because I was super excited to dive into what students had created throughout the quarter.
+**Sevan and I split grading.** I read and wrote responses to student self-reflections, while Sevan graded homework assignments 1-3 (along with any that were revised / resubmitted for a regrade), in accordance with the provided rubrics. I provided written feedback to all students on homework #3 (separate from their grades), since this assignment asked for the first complete draft of all data visualizations which would be submitted as part of their [final course assignment](https://eds-240-data-viz.github.io/assignments/HW4.html). I also chose to grade these final assignments (along with any regrades), in part because I wanted to understand where tweaks could me made for next year, and also because I was super excited to dive into what students had created throughout the quarter.
 
 ## Other musings
 
@@ -339,9 +339,9 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Providing the dates that each homework would be assigned and due in the syllabus (and on day 1 of class),** which helped everyone plan out their quarters. Students were juggling two other courses, plus work on their capstones (along with any other jobs, personal matters, life). 
 
-- **[Pre-](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR1-precourse.html), [mid-](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR2-midcourse.html), and [end-of-course](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR3-endcourse.html) self reflections** were such a great way for me to learn about students (on a professional and personal level) *and importantly*, encouraged them to both set their own learning goals and check in on their progress towards those goals throughout the quarter. Sending so much appreciation to [An Bui](https://an-bui.com/), who originally crafted these reflections for her [environmental stats course](https://an-bui.com/teaching/02_envs-193ds/).
+- **[Pre-](https://eds-240-data-viz.github.io/assignments/SR1-precourse.html), [mid-](https://eds-240-data-viz.github.io/assignments/SR2-midcourse.html), and [end-of-course](https://eds-240-data-viz.github.io/assignments/SR3-endcourse.html) self reflections** were such a great way for me to learn about students (on a professional and personal level) *and importantly*, encouraged them to both set their own learning goals and check in on their progress towards those goals throughout the quarter. Sending so much appreciation to [An Bui](https://an-bui.com/), who originally crafted these reflections for her [environmental stats course](https://an-bui.com/teaching/02_envs-193ds/).
 
-- **Spreading out work for the [final assignment](https://samanthacsik.github.io/EDS-240-data-viz/assignments/HW4.html) across the entire quarter** allowed for *lots* of feedback (from myself, Sevan, and peers). It also provided more time for students to think deeply about their data, pivot if necessary, and experiment with different graphic forms, design approaches, etc. A few student quotes in response to the question, *What is one thing that you really liked about this course, and why?* (from the [end-of-course self reflection](https://samanthacsik.github.io/EDS-240-data-viz/assignments/SR3-endcourse.html)):
+- **Spreading out work for the [final assignment](https://eds-240-data-viz.github.io/assignments/HW4.html) across the entire quarter** allowed for *lots* of feedback (from myself, Sevan, and peers). It also provided more time for students to think deeply about their data, pivot if necessary, and experiment with different graphic forms, design approaches, etc. A few student quotes in response to the question, *What is one thing that you really liked about this course, and why?* (from the [end-of-course self reflection](https://eds-240-data-viz.github.io/assignments/SR3-endcourse.html)):
 
 >[*"I really liked how the project was scaled. It was super useful to start working on homework 4 in the first couple of weeks because by the time that we were ready to really turn something in we had become very familiar with it."*]{.small-text}
 
@@ -351,9 +351,9 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 <!-- >[*"I thoroughly enjoyed how much feedback we got on assignments. In other courses, feedback is very minimal but in this course, the feedback was more tangible. I feel like I greatly improved on my dataviz skills because of the feedback"*]{.small-text} -->
 
-- **Saving all the awesome resources** that I came across while building lectures, and adding them to the [course website](https://samanthacsik.github.io/EDS-240-data-viz/resources.html) -- I was motivated by slightly selfish reasons (I didn't want to lose track of the bazillion tabs I had open at any given time), but it was also a great place to point students to when they were looking for a place to start or resources on a particular topic.
+- **Saving all the awesome resources** that I came across while building lectures, and adding them to the [course website](https://eds-240-data-viz.github.io/resources.html) -- I was motivated by slightly selfish reasons (I didn't want to lose track of the bazillion tabs I had open at any given time), but it was also a great place to point students to when they were looking for a place to start or resources on a particular topic.
 
-- **Asking students to complete [short surveys](https://samanthacsik.github.io/EDS-240-data-viz/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
+- **Asking students to complete [short surveys](https://eds-240-data-viz.github.io/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
   - [Pacing was ___ (multiple choice: too fast, too slow, just right)]{.small-text}
   - [Today, I felt ___ (multiple choice: engaged / focused / excited, disengaged / distracted / not very excited, neutral / somewhere in the middle)]{.small-text}
   - [One thing I feel that I have a good understanding of now is ___ (short answer)]{.small-text}
@@ -366,7 +366,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Streamline / cut lecture content.** I *almost always* overestimate how much content I can fit into any given time period, especially when live-coding / technical instruction is involved -- inevitably, there are lots of (great) questions and troubleshooting, and my overzealousness leads to more content than is reasonable. By carefully considering what content to trim and / or rearrange, I'm hopeful I can introduce more frequent or longer breaks.
 
-- **Create template scripts / .qmd files for students to code along in.** Each student [created their own GitHub repository](https://samanthacsik.github.io/EDS-240-data-viz/course-materials/week1.html#create-your-eds-240-class-examples-repository) to house all the code we'd write together throughout the quarter. Overall, I loved this setup -- it kept the collective EDS 240 materials organized in one place and was an opportunity to practice repository management and version control. Next time, I'd love to provide template .qmd files with YAMLs and section headers (and maybe even some starter code for particular exercises) already filled out -- I think this would help a bit with time management (it takes a bit of time to set these up together) and also help us all stay organized as we move from exercise to exercise throughout class.
+- **Create template scripts / .qmd files for students to code along in.** Each student [created their own GitHub repository](https://eds-240-data-viz.github.io/course-materials/week1.html#create-your-eds-240-class-examples-repository) to house all the code we'd write together throughout the quarter. Overall, I loved this setup -- it kept the collective EDS 240 materials organized in one place and was an opportunity to practice repository management and version control. Next time, I'd love to provide template .qmd files with YAMLs and section headers (and maybe even some starter code for particular exercises) already filled out -- I think this would help a bit with time management (it takes a bit of time to set these up together) and also help us all stay organized as we move from exercise to exercise throughout class.
 
 - **Move some data wrangling to pre-class prep.** Year after year, students have requested more in-class data wrangling practice across all courses. I started the quarter off by live-coding my way through all data wrangling (ahead of our in-class data viz practice), but it ultimately took up a lot of really valuable time that I preferred to spend on data viz itself. One student eventually suggested that I provide the wrangling code ahead of time, require students to review it on their own as part of their pre-class prep activities, then reserve ~10min for answering any questions in class. This seemed to work quite well, and I'm excited to try it out a bit more next year. I'll likely still plan to do a bit of in-class wrangling at the start of the quarter, or if there are particularly new methods that I'd like to introduce.
 
