--- a/posts/2024-04-02-data-viz-course/index.qmd
+++ b/posts/2024-04-02-data-viz-course/index.qmd
@@ -169,7 +169,7 @@ knitr::include_graphics("media/grade-tracker-green.png")
 
 I would be lying if I said that I wasn't **incredibly nervous** to try this out. While all the literature I had explored got me super jazzed about the idea of specs grading, it *is* quite different than what our students are used to...and **change can feel disruptive**. I spent a full hour of our first (3hr-long) lecture laying out this grading structure, the accompanying token system, and expectations (and of course, answering many questions). 
 
-Some students were understandably uncertain about the specs grading + token system at the start, but **I ultimately received overwhelmingly positive feedback**. I'll share just a few student quotes, pulled from their [mid-course](https://eds-240-data-viz.github.io/assignments/SR2-midcourse.html) and [end-of-course](https://eds-240-data-viz.github.io/assignments/SR3-endcourse.html) self-reflections:
+Some students were understandably uncertain about the specs grading + token system at the start, but **I ultimately received overwhelmingly positive feedback**. I'll share just a few student quotes, pulled from their [mid-course](https://eds-240-data-viz.github.io/course-materials/assignments/SR2-midcourse.html) and [end-of-course](https://eds-240-data-viz.github.io/course-materials/assignments/SR3-endcourse.html) self-reflections:
 
 >[*"I really appreciated the alternative grading style as it took a lot of pressure off of me, as I tend to be a bit of perfectionist. So without the number and letter grades on individual assignments, it allowed me to enjoy the work more and potentially create better visualizations in the process."*]{.small-text}
 
@@ -262,7 +262,7 @@ This was honestly the part I dreaded the most. While I've taught my fair share o
 - how much is a **reasonable amount of work** to ask of students given the submission schedule (they had ~2 weeks per assignment)?
 - how can we shift assessments to be more **learner-centered** and less susceptible to plagiarism in the age of generative AI tools (e.g. ChatGPT)?
 
-While I won't go into specific tasks for each assignment (you can check them out on the [course website](https://eds-240-data-viz.github.io/assignments.html) though!), **I really enjoyed asking students to both complete a coding task *and* describe in writing their considerations, workflow, design choices, etc. which (I hoped) would put a greater focus on the decision-making process.** I definitely felt a bit of validation when a student responded to the question, *"How have your learning goals changed? Have they stayed the same?"* (from the [mid-course self-reflection](https://eds-240-data-viz.github.io/assignments/SR2-midcourse.html)):
+While I won't go into specific tasks for each assignment (you can check them out on the [course website](https://eds-240-data-viz.github.io/course-materials/assignments.html) though!), **I really enjoyed asking students to both complete a coding task *and* describe in writing their considerations, workflow, design choices, etc. which (I hoped) would put a greater focus on the decision-making process.** I definitely felt a bit of validation when a student responded to the question, *"How have your learning goals changed? Have they stayed the same?"* (from the [mid-course self-reflection](https://eds-240-data-viz.github.io/course-materials/assignments/SR2-midcourse.html)):
 
 >[*"I feel that this class has greatly allowed me to progress towards my learning goals, but in a different way than I originally thought. My initial goal in taking this class was to get better at `{ggplot2}` and other data viz packages. While I have definitely been doing this, I have much more so been progressing in my learning of how to approach data visualization and then using packages like `{ggplot2}` as a tool to execute this. My learning goals have sort of shifted for the better in a way that I wasn’t really anticipating."*]{.small-text}
 
@@ -295,7 +295,7 @@ For assignments submitted via GitHub Classroom, **we provided feedback largely b
   
 #### (b) Submitting rendered or published `.qmd` files{#qmd-files}
 
-The [final course assignment](https://eds-240-data-viz.github.io/assignments/HW4.html) asked students to create a series of visualizations using data of their choosing. This large task was broken down into smaller pieces and spread across all four homework assignments (so students were working on it throughout the entire quarter). **For this course-long project, we asked students to create their own GitHub repositories (i.e. not using GitHub Classroom), where they would do all related work.** Final projects were submitted either as published Quarto documents (using [GitHub Pages](https://pages.github.com/)) or as published blog posts on student personal websites. Intermediate submissions (i.e. those that were a part of the first three homework assignments) were submitted as rendered HTML files, which we could open and assess via the web browser. **We provided feedback for these submissions by opening [issues](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) on student repos.**
+The [final course assignment](https://eds-240-data-viz.github.io/course-materials/assignments/HW4.html) asked students to create a series of visualizations using data of their choosing. This large task was broken down into smaller pieces and spread across all four homework assignments (so students were working on it throughout the entire quarter). **For this course-long project, we asked students to create their own GitHub repositories (i.e. not using GitHub Classroom), where they would do all related work.** Final projects were submitted either as published Quarto documents (using [GitHub Pages](https://pages.github.com/)) or as published blog posts on student personal websites. Intermediate submissions (i.e. those that were a part of the first three homework assignments) were submitted as rendered HTML files, which we could open and assess via the web browser. **We provided feedback for these submissions by opening [issues](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) on student repos.**
 
 ### 5. Plan TA responsibilities{#TA}
 
@@ -315,7 +315,7 @@ A major challenge when teaching technical skills (e.g. coding) is assisting stud
 
 #### Grading
 
-**Sevan and I split grading.** I read and wrote responses to student self-reflections, while Sevan graded homework assignments 1-3 (along with any that were revised / resubmitted for a regrade), in accordance with the provided rubrics. I provided written feedback to all students on homework #3 (separate from their grades), since this assignment asked for the first complete draft of all data visualizations which would be submitted as part of their [final course assignment](https://eds-240-data-viz.github.io/assignments/HW4.html). I also chose to grade these final assignments (along with any regrades), in part because I wanted to understand where tweaks could me made for next year, and also because I was super excited to dive into what students had created throughout the quarter.
+**Sevan and I split grading.** I read and wrote responses to student self-reflections, while Sevan graded homework assignments 1-3 (along with any that were revised / resubmitted for a regrade), in accordance with the provided rubrics. I provided written feedback to all students on homework #3 (separate from their grades), since this assignment asked for the first complete draft of all data visualizations which would be submitted as part of their [final course assignment](https://eds-240-data-viz.github.io/course-materials/assignments/HW4.html). I also chose to grade these final assignments (along with any regrades), in part because I wanted to understand where tweaks could me made for next year, and also because I was super excited to dive into what students had created throughout the quarter.
 
 ## Other musings
 
@@ -339,9 +339,9 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Providing the dates that each homework would be assigned and due in the syllabus (and on day 1 of class),** which helped everyone plan out their quarters. Students were juggling two other courses, plus work on their capstones (along with any other jobs, personal matters, life). 
 
-- **[Pre-](https://eds-240-data-viz.github.io/assignments/SR1-precourse.html), [mid-](https://eds-240-data-viz.github.io/assignments/SR2-midcourse.html), and [end-of-course](https://eds-240-data-viz.github.io/assignments/SR3-endcourse.html) self reflections** were such a great way for me to learn about students (on a professional and personal level) *and importantly*, encouraged them to both set their own learning goals and check in on their progress towards those goals throughout the quarter. Sending so much appreciation to [An Bui](https://an-bui.com/), who originally crafted these reflections for her [environmental stats course](https://an-bui.com/teaching/02_envs-193ds/).
+- **[Pre-](https://eds-240-data-viz.github.io/course-materials/assignments/SR1-precourse.html), [mid-](https://eds-240-data-viz.github.io/course-materials/assignments/SR2-midcourse.html), and [end-of-course](https://eds-240-data-viz.github.io/course-materials/assignments/SR3-endcourse.html) self reflections** were such a great way for me to learn about students (on a professional and personal level) *and importantly*, encouraged them to both set their own learning goals and check in on their progress towards those goals throughout the quarter. Sending so much appreciation to [An Bui](https://an-bui.com/), who originally crafted these reflections for her [environmental stats course](https://an-bui.com/teaching/02_envs-193ds/).
 
-- **Spreading out work for the [final assignment](https://eds-240-data-viz.github.io/assignments/HW4.html) across the entire quarter** allowed for *lots* of feedback (from myself, Sevan, and peers). It also provided more time for students to think deeply about their data, pivot if necessary, and experiment with different graphic forms, design approaches, etc. A few student quotes in response to the question, *What is one thing that you really liked about this course, and why?* (from the [end-of-course self reflection](https://eds-240-data-viz.github.io/assignments/SR3-endcourse.html)):
+- **Spreading out work for the [final assignment](https://eds-240-data-viz.github.io/course-materials/assignments/HW4.html) across the entire quarter** allowed for *lots* of feedback (from myself, Sevan, and peers). It also provided more time for students to think deeply about their data, pivot if necessary, and experiment with different graphic forms, design approaches, etc. A few student quotes in response to the question, *What is one thing that you really liked about this course, and why?* (from the [end-of-course self reflection](https://eds-240-data-viz.github.io/course-materials/assignments/SR3-endcourse.html)):
 
 >[*"I really liked how the project was scaled. It was super useful to start working on homework 4 in the first couple of weeks because by the time that we were ready to really turn something in we had become very familiar with it."*]{.small-text}
 
@@ -353,7 +353,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Saving all the awesome resources** that I came across while building lectures, and adding them to the [course website](https://eds-240-data-viz.github.io/resources.html) -- I was motivated by slightly selfish reasons (I didn't want to lose track of the bazillion tabs I had open at any given time), but it was also a great place to point students to when they were looking for a place to start or resources on a particular topic.
 
-- **Asking students to complete [short surveys](https://eds-240-data-viz.github.io/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
+- **Asking students to complete [short surveys](https://eds-240-data-viz.github.io/course-materials/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
   - [Pacing was ___ (multiple choice: too fast, too slow, just right)]{.small-text}
   - [Today, I felt ___ (multiple choice: engaged / focused / excited, disengaged / distracted / not very excited, neutral / somewhere in the middle)]{.small-text}
   - [One thing I feel that I have a good understanding of now is ___ (short answer)]{.small-text}
