jotted down notes for a future data viz 2.0 blog post

--- a/posts/data-viz-2.0/index.qmd
+++ b/posts/data-viz-2.0/index.qmd
@@ -17,3 +17,4 @@ draft-mode: unlinked
 
 - moved website and all materials into a dedicated GitHub organization (HT: Ruth Oliver)
 - changes to website structure (mainly daily materials)
+- HW4 option to propose your own project (HT: Max Czapanskiy)
