borrowed some CSS from @oharac's coreR_test repo (https://github.com/nceas-learning-hub/coreR_test/blob/main/lh-style.css) on making responsive quarto slide iframes; still not perfect, but better than before (iframes would run right off the screen on a mobile device or smaller viewport)

--- a/talks_workshops/2021-11-15-ide-tips-tricks/index.qmd
+++ b/talks_workshops/2021-11-15-ide-tips-tricks/index.qmd
@@ -19,7 +19,7 @@ It became clear after two cohorts of students that delivering tons of shortcut a
 
 <br>
 
-<center><iframe src="https://ucsb-meds.github.io/IDE-tips-and-tricks/#/title-slide" title="IDE Tips & Tricks" width=750px, height=550px></iframe></center>
+<center><iframe class="slide-deck" src="https://ucsb-meds.github.io/IDE-tips-and-tricks/#/title-slide" title="IDE Tips & Tricks" width=750px, height=550px></iframe></center>
 
 <br>
 
