--- a/posts/2024-04-02-data-viz-course/index.qmd
+++ b/posts/2024-04-02-data-viz-course/index.qmd
@@ -353,7 +353,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Saving all the awesome resources** that I came across while building lectures, and adding them to the [course website](https://eds-240-data-viz.github.io/resources.html) -- I was motivated by slightly selfish reasons (I didn't want to lose track of the bazillion tabs I had open at any given time), but it was also a great place to point students to when they were looking for a place to start or resources on a particular topic.
 
-- **Asking students to complete [short surveys](https://eds-240-data-viz.github.io/course-materials/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
+- **Asking students to complete [short surveys](https://eds-240-data-viz.github.io/assignments.html#end-of-class-surveys) at the end of each class**, which were an easy way for me to quickly assess areas of confusion and seek feedback while things were fresh in everyone's minds (completing these also counted towards their course grade). I tried my best to address recurring points of confusion by following up with further explanations and resources in the class Slack channel. Survey questions were as follows:
   - [Pacing was ___ (multiple choice: too fast, too slow, just right)]{.small-text}
   - [Today, I felt ___ (multiple choice: engaged / focused / excited, disengaged / distracted / not very excited, neutral / somewhere in the middle)]{.small-text}
   - [One thing I feel that I have a good understanding of now is ___ (short answer)]{.small-text}
