--- a/posts/data-viz-2.0/index.qmd
+++ b/posts/data-viz-2.0/index.qmd
@@ -23,3 +23,4 @@ draft-mode: unlinked
   - discussion materials (organized in table)
 - HW4 option to propose your own project (HT: Max Czapanskiy)
 - started wiki
+- googlesheet for learning partners
